# di-pyconjp2021

./: README.md  pyproject.toml
data/: receipt01.txt
ipynb/: 01_load_image.ipynb  02_vision_api.ipynb  03_visualize.py.ipynb
util/: vision_ocr.py
