[tool.poetry]
name = "di-pyconjp2021"
version = "0.1.0"
description = ""
authors = ["Yuki Okuda <y.okuda@dr-ubie.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
google-cloud-vision = "^2.4.4"
jupyter = "^1.0.0"
Pillow = "^8.3.2"
numpy = "^1.21.2"
protobuf = "^3.18.1"
spacy = {extras = ["ja"], version = "^3.1.3"}
ginza = "^5.0.2"
ja-ginza = "^5.0.0"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
